# -*- mode: python -*-
# vi: set ft=python :

# Copyright (c) 2018, Toyota Research Institute.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# * Redistributions of source code must retain the above copyright notice, this
#   list of conditions and the following disclaimer.
#
# * Redistributions in binary form must reproduce the above copyright notice,
#   this list of conditions and the following disclaimer in the documentation
#   and/or other materials provided with the distribution.
#
# * Neither the name of the copyright holder nor the names of its contributors
#   may be used to endorse or promote products derived from this software
#   without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

load("@drake//tools/skylark:py.bzl", "py_binary", "py_test")
load("@drake//tools/skylark:pybind.bzl", "pybind_py_library")

# Compile a sample application.
cc_binary(
    name = "simple_continuous_time_system",
    srcs = ["simple_continuous_time_system.cc"],
    deps = [
        "@drake//systems/analysis",
        "@drake//systems/framework",
    ],
)

# Make a simple Python application.
py_binary(
    name = "simple_logging_example",
    srcs = ["simple_logging_example.py"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

# This ensures that downstream Bazel projects can use Drake's `find_resource`
# functionality without needing to resort to environment variables.
py_test(
    name = "find_resource_test",
    srcs = ["find_resource_test.py"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

# Run the applications to make sure they complete successfully.
# N.B. For actual development, you should prefer language-specific test rules,
# such as `cc_test` and `py_test`.
sh_test(
    name = "simple_continuous_time_system_test",
    size = "small",
    srcs = [":simple_continuous_time_system"],
)

sh_test(
    name = "simple_logging_example_test",
    size = "small",
    srcs = ["exec.sh"],
    args = ["$(location :simple_logging_example)"],
    data = [":simple_logging_example"],
)

# For custom bindings, you *must* link against `drake_shared_library` for *all*
# C++ libraries; not doing so will lead to ODR (One Definition Rule) linking
# issues.
cc_library(
    name = "simple_adder",
    srcs = [
        # While the `*-inl.h` pattern is not required, this does ensure that we
        # test separate compilation and linking.
        "simple_adder.cc",
        "simple_adder-inl.h",
    ],
    hdrs = [
        "simple_adder.h",
    ],
    deps = [
        # N.B. Per the above comment, this does NOT link to static libraries
        # (e.g. "@drake//systems/analysis").
        "@drake//:drake_shared_library",
    ],
)

# Show that the C++ functionality works as-is.
cc_test(
    name = "simple_adder_test",
    srcs = ["simple_adder_test.cc"],
    deps = [":simple_adder"],
)

pybind_py_library(
    name = "simple_adder_py",
    cc_so_name = "simple_adder",
    cc_srcs = ["simple_adder_py.cc"],
    cc_deps = [
        ":simple_adder",
        "@drake//bindings/pydrake/common:cpp_template_pybind",
        "@drake//bindings/pydrake/common:default_scalars_pybind",
    ],
    py_deps = ["@drake//bindings/pydrake"],
    py_imports = ["."],
)

# Mimic the C++ test in Python to show the bindings.
py_test(
    name = "simple_adder_py_test",
    srcs = ["simple_adder_py_test.py"],
    deps = [":simple_adder_py"],
)

py_test(
    name = "import_all_test",
    srcs = ["import_all_test.py"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)
