<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drake_ament_cmake_installed</name>
  <version>0.0.0</version>
  <description>Ament CMake project with an installed Drake</description>
  <maintainer email="jamie.snape@kitware.com">Jamie Snape</maintainer>
  <license>MIT-0</license>
  <url type="website">https://drake.mit.edu</url>
  <url type="bugtracker">https://github.com/RobotLocomotion/drake-external-examples/issues</url>
  <url type="repository">https://github.com/RobotLocomotion/drake-external-examples</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <doc_depend>doxygen</doc_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
