<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drake_example_pendulum</name>
  <version>0.1.0</version>
  <description>Ament CMake project with an installed Drake</description>
  <maintainer email="addisu@openrobotics.org">Addisu Z. Taddese</maintainer>
  <license>BSD</license>
  <url type="website">https://drake.mit.edu</url>
  <url type="bugtracker">https://github.com/RobotLocomotion/drake-external-examples/issues</url>
  <url type="repository">https://github.com/RobotLocomotion/drake-external-examples</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>drake_example_pendulum_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
